<resources>
    <string name="app_name">AndroidFundamentals2020</string>
    <string name="orange_text">This is an orange TextView</string>
    <string name="green_text">This is an green TextView</string>
    <string name="blue_text">This is an blue TextView</string>
    <string name="this_is_a_button">This is a button</string>
    <string name="this_is_a_green_button">This is a green button</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notify_me">Notify me</string>
    <string name="auto_backup">Auto backup</string>
    <string name="this_is_an_edit_text">This is an EditText</string>
    <string name="this_is_a_new_edit_text">This is a new EditText</string>
    <string name="hello_android_fundamentals_2020">Hello Android Fundamentals 2020!</string>

    <string name="lorem_ipsum_very_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sem elit, luctus vel sollicitudin sed, porttitor ut elit. Etiam malesuada facilisis auctor. Donec in diam scelerisque, aliquet orci nec, consectetur augue. Donec magna ante, tincidunt a erat vel, porta tempor nulla. Ut vitae nisl at ipsum tristique porta nec eget velit. Fusce mi sem, auctor eu aliquam at, lacinia nec felis. Etiam volutpat faucibus lacus et interdum.

Integer feugiat enim et risus tempus, a fringilla quam rhoncus. Donec eu libero non nulla malesuada porta. Nunc tempus nunc vel libero fringilla mattis. Proin sem tellus, feugiat eu imperdiet at, sagittis blandit nisl. Integer leo dolor, pharetra non tortor non, vulputate mollis nisi. Nullam sit amet quam eget mi volutpat pulvinar. Integer ornare lectus eget commodo faucibus. Donec maximus nisi urna, a imperdiet purus pulvinar id. Cras eleifend aliquam mattis. Proin interdum dui quis erat convallis fringilla. Ut mollis nisl vel elit venenatis, eget tincidunt risus pretium. Vestibulum a massa elit.

Proin nisl sem, lacinia sed ipsum eget, lobortis suscipit lorem. Donec vitae scelerisque magna. Phasellus in placerat nisl. Sed varius rutrum ligula eu eleifend. Praesent consectetur, sapien ac pharetra rhoncus, neque tellus facilisis ex, vitae euismod velit justo sit amet tortor. Aliquam neque risus, dapibus sed lorem vitae, malesuada bibendum nulla. Nam feugiat dui augue, a euismod arcu porta et. Proin vehicula libero at ligula facilisis, at viverra lorem scelerisque. Proin mauris tortor, viverra sed ultricies eu, consequat ut mauris. Aliquam blandit quam ut dolor auctor pellentesque. Sed gravida ex at augue dapibus, ac aliquam nisi ultrices. Aliquam fermentum diam non ex dictum sagittis ac at felis. Nullam pretium varius metus, non dignissim metus dapibus a.

Donec velit est, tincidunt a nisl nec, rutrum blandit lorem. Curabitur sit amet eros metus. Mauris vel leo non ligula tincidunt tincidunt quis sed est. Nunc ultricies dolor neque. Donec sit amet mi tellus. Nam sagittis commodo purus, sed rhoncus est. Cras luctus sapien eu arcu condimentum, et pharetra eros sagittis. Maecenas non sagittis enim. Nam sed erat libero. Cras vulputate fringilla enim, vel ultrices velit ullamcorper id. Proin non dignissim mauris, vitae tristique enim. In finibus vel tellus vitae hendrerit. Vivamus eleifend facilisis risus, ac imperdiet mi posuere sit amet.

Donec at eros pharetra, bibendum enim sed, posuere erat. In eros est, placerat vitae vehicula eget, elementum vitae turpis. Nunc convallis tincidunt magna non suscipit. Aenean lobortis ex et mattis feugiat. Nunc cursus accumsan diam ut fermentum. In iaculis mi quis convallis porta. Nullam nunc tortor, malesuada non pellentesque eget, euismod quis enim. Nam sit amet vestibulum lorem. Donec sit amet tempor libero. Fusce turpis enim, ullamcorper eu massa et, ultrices tincidunt arcu. Praesent suscipit, sem a malesuada aliquam, orci tellus dapibus erat, quis lobortis diam dui eget leo. Proin ac orci nisl. Donec ante urna, posuere eget ante quis, sagittis rutrum sapien. Mauris id varius mi, bibendum congue augue.

Nam eu ante massa. Nam fringilla volutpat quam, quis porta massa semper ut. Cras tempor sodales iaculis. Vestibulum leo orci, commodo eu mattis lacinia, pellentesque at odio. Etiam eu condimentum turpis. Pellentesque nec nulla a nunc pharetra pretium. Aliquam ac aliquet velit.

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sollicitudin, ipsum sit amet gravida fermentum, odio magna maximus felis, ut hendrerit purus turpis facilisis ex. Duis consectetur, lacus vitae dapibus venenatis, tellus sem interdum lectus, dictum tincidunt elit lorem eu eros. In iaculis nisi et porta aliquet. Suspendisse ultricies, ante et imperdiet placerat, risus erat maximus ex, quis sodales leo nisi suscipit libero. Donec vulputate odio quis turpis rutrum, iaculis consectetur ligula convallis. Nulla facilisi. Vestibulum sit amet lacus purus. Nullam blandit egestas velit, id malesuada justo vestibulum a. Sed laoreet ornare dui, sit amet finibus justo pellentesque at. In tristique dolor eget sem ultricies viverra.

Nulla placerat justo vitae orci aliquam dapibus. Aliquam a convallis lacus. Nunc pulvinar, ligula eu venenatis venenatis, ante est laoreet risus, quis aliquet massa tortor ac erat. Praesent ut nibh quis metus vulputate elementum eget ut lacus. Vestibulum pretium mattis pulvinar. In nec eros nec ante lacinia interdum. Nam aliquam tincidunt venenatis. Donec ultricies erat nec magna aliquam semper. Aliquam a hendrerit mauris, nec luctus quam. Integer tempor est id quam varius, sed cursus lorem congue.

Maecenas hendrerit sed leo quis placerat. Ut egestas tortor mi, id venenatis tortor ultrices sit amet. Nam sed pulvinar ante, quis auctor diam. In vel consequat urna, cursus iaculis magna. Nunc pretium euismod dignissim. Cras vel libero non nisi volutpat euismod eu vel ipsum. Donec sodales ligula sit amet urna vehicula, vitae finibus purus porttitor. Nullam sagittis posuere dui nec luctus. Aenean posuere massa suscipit odio pulvinar, nec mollis nulla volutpat. Mauris nulla ligula, varius vestibulum libero nec, imperdiet euismod justo. Morbi mattis velit et tempor lobortis. Proin massa metus, euismod sit amet faucibus iaculis, porta id massa. Ut id porttitor lectus, ut rhoncus nisl. Nam blandit pellentesque egestas. Aliquam mollis mauris leo, sit amet hendrerit metus suscipit quis. Nulla facilisi.

Nulla sed scelerisque urna. Phasellus efficitur iaculis est, vel posuere tortor venenatis vel. Morbi mollis, mauris in sagittis fringilla, erat erat ultricies sapien, quis varius ante velit sit amet ipsum. Integer sodales pellentesque lorem nec molestie. Praesent pretium enim tristique, bibendum lacus ac, blandit arcu. Maecenas pretium dui nec rutrum ullamcorper. Suspendisse dapibus odio nisi, eget elementum eros elementum non. Cras vulputate, ligula ut pellentesque consectetur, leo nulla semper dolor, at rutrum dolor nunc eget massa. Vivamus pellentesque bibendum orci.</string>

    <string name="accept_terms"><![CDATA[I accept T&C]]></string>
    <string name="submit">Submit</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="login">Login</string>

    <string name="email_cannot_be_empty">Email address cannot be empty</string>
    <string name="email_not_valid">Email address is not valid</string>
    <string name="phone_cannot_be_empty">Phone address cannot be empty</string>
    <string name="phone_not_valid">Phone number is not valid</string>


    <string name="merry_little_christmas">Have yourself a merry Christmas,\nLet your heart be light\nFrom now on, our troubles will be out of sight</string>
    <string name="jingles_bells">Jingles bells</string>
    <string name="happy_holidays">Happy Holidays!</string>
    <string name="let_it_snow">Let it snow</string>
    <string name="from_ionut">From Andreea</string>
    <string name="star_big">star big</string>
</resources>